--- a/go/Makefile
+++ b/go/Makefile
@@ -4,7 +4,10 @@ NC = \033[0m
 GRN = \033[0;32m
 
 .DEFAULT_GOAL := build
-.PHONY : example.bin example.txt ff-tests
+
+define CHECK =
+	printf "${GRN}OK${NC} " || printf "${RED}FAILED${NC} "
+endef
 
 .PHONY : clean 
 clean:
@@ -16,23 +19,36 @@ build/%: ./cmd/compile/*.go ./src/**/*.go
 build: build/compile build/execute build/run build/repl
 
 .PHONY : test
-test:	build ff-tests ./artifacts/example.ffb ./artifacts/example.txt
-
-ff-tests: build/run
-	@printf "** Go FF Test **"
-	@cd ..; time cat ./ff/tests.ffp | ./go/build/run && printf "${GRN}OK${NC}\n" || printf "${RED}FAILED${NC}\n"
-	@echo ""
+test:	build ff ./artifacts/example.ffb ./artifacts/example.txt
 
 .PHONY : ./artifacts/example.ffb
 ./artifacts/example.ffb: build/compile
 	@printf "** Go Compile **"
 	@time cat ../ff/example.ff | ./build/compile > ./artifacts/example.ffb
-	@cmp --silent -- "./artifacts/example.ffb" "../fixtures/example.ffb" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
+	@cmp --silent -- "./artifacts/example.ffb" "../fixtures/example.ffb" && $(CHECK)
+	@echo ""
 	@echo ""
 
 .PHONY : ./artifacts/example.txt
 ./artifacts/example.txt: build/execute
 	@printf "** Go Execute **"
 	@time cat ./artifacts/example.ffb | ./build/execute > ./artifacts/example.txt
-	@cmp --silent -- "./artifacts/example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
+	@cmp --silent -- "./artifacts/example.txt" "../ff/example.ff.test" && $(CHECK)
+	@echo ""
+	@echo ""
+
+FF = ./ff{,/*}/*.{ff,ffp}
+
+.PHONY : ff
+ff: build/run
+	@printf "** Deno Execute FF Files **"
+	@echo ""
+	@cd ..; \
+		for f in ${FF}; do \
+			if [ -f $${f}.test ]; then \
+				printf "$${f} "; \
+				cat $${f} | ./go/build/run 2>/dev/null | cmp - $${f}.test -s && $(CHECK); \
+				echo ""; \
+			fi \
+		done
 	@echo ""
