python and ruby tests

--- a/python/Makefile
+++ b/python/Makefile
@@ -3,18 +3,16 @@ RED = \033[0;31m
 NC = \033[0m
 GRN = \033[0;32m
 
+define CHECK =
+	printf "${GRN}OK${NC} " || printf "${RED}FAILED${NC} "
+endef
+
 .PHONY : clean
 clean:
 	@rm -f ./example.*
 
 .PHONY : test
-test:	ff-tests example
-
-.PHONY : ff-tests
-ff-tests:
-	@printf "** Python FF Test **"
-	@cd ..; time ./deno/build/preprocess ./ff/tests.ffp | python3 ./python/execute.py > /dev/null && printf "${GRN}OK${NC}\n" || printf "${RED}FAILED${NC}\n"
-	@echo ""
+test:	ff example
 
 .PHONY : ./artifacts/example.txt
 ./artifacts/example.txt:
@@ -23,5 +21,21 @@ ff-tests:
 
 .PHONY : example
 example: ./artifacts/example.txt
-	@cmp --silent -- "./artifacts/example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
+	@cmp -s -- "./artifacts/example.txt" "../fixtures/example.txt" && $(CHECK)
+	@echo ""
+
+FF = ./ff{,/*}/*.{ff,ffp}
+
+.PHONY : ff
+ff:
+	@printf "** Deno Execute FF Files **"
+	@echo ""
+	@cd ..; \
+		for f in ${FF}; do \
+			if [ -f $${f}.test ]; then \
+				printf "$${f} "; \
+				./deno/build/preprocess $${f} | python3 ./python/execute.py 2>/dev/null | cmp - $${f}.test -s && $(CHECK); \
+				echo ""; \
+			fi \
+		done
 	@echo ""
