--- a/ruby/Makefile
+++ b/ruby/Makefile
@@ -3,18 +3,16 @@ RED = \033[0;31m
 NC = \033[0m
 GRN = \033[0;32m
 
+define CHECK =
+	printf "${GRN}OK${NC} " || printf "${RED}FAILED${NC} "
+endef
+
 .PHONY : clean 
 clean:
 	@rm -f ./example.*
 
 .PHONY : test
-test:	ff-tests example
-
-.PHONY : ff-tests
-ff-tests:
-	@printf "** Ruby FF Test **"
-	@cd ..; time ./deno/build/preprocess ./ff/tests.ffp | ruby ./ruby/execute.rb > /dev/null && printf "${GRN}OK${NC}\n" || printf "${RED}FAILED${NC}\n"
-	@echo ""
+test:	ff example
 
 .PHONY : ./artifacts/example.txt
 ./artifacts/example.txt:
@@ -24,4 +22,20 @@ ff-tests:
 .PHONY : example
 example: ./artifacts/example.txt
 	@cmp --silent -- "./artifacts/example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
+	@echo ""
+
+FF = ./ff{,/*}/*.{ff,ffp}
+
+.PHONY : ff
+ff:
+	@printf "** Deno Execute FF Files **"
+	@echo ""
+	@cd ..; \
+		for f in ${FF}; do \
+			if [ -f $${f}.test ]; then \
+				printf "$${f} "; \
+				./deno/build/preprocess $${f} | ruby ./ruby/execute.rb 2>/dev/null | cmp - $${f}.test -s && $(CHECK); \
+				echo ""; \
+			fi \
+		done
 	@echo ""
