--- a/go/Makefile
+++ b/go/Makefile
@@ -1,13 +1,6 @@
-SHELL := /bin/bash
-RED = \033[0;31m
-NC = \033[0m
-GRN = \033[0;32m
+include ../defs.mk
 
 .DEFAULT_GOAL := build
-
-define CHECK =
-	printf "${GRN}OK${NC} " || printf "${RED}FAILED${NC} "
-endef
 
 .PHONY : clean 
 clean:
@@ -47,8 +40,6 @@ interpret: build/run
 		| cmp -s -- "./artifacts/example.txt" "../ff/example.out" && $(CHECK)
 	@echo ""
 	@echo ""
-
-FF = ./ff{,/*}/*.{ff,ffp}
 
 .PHONY : ff
 ff: build/run
