--- a/python/Makefile
+++ b/python/Makefile
@@ -1,11 +1,4 @@
-SHELL := /bin/bash
-RED = \033[0;31m
-NC = \033[0m
-GRN = \033[0;32m
-
-define CHECK =
-	printf "${GRN}OK${NC} " || printf "${RED}FAILED${NC} "
-endef
+include ../defs.mk
 
 .PHONY : test
 test:	ff interpret
@@ -18,8 +11,6 @@ interpret:
 		| cmp -s - "../ff/example.out" && $(CHECK)
 	@echo ""
 	@echo ""
-
-FF = ./ff{,/*}/*.{ff,ffp}
 
 .PHONY : ff
 ff:
