--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -27,12 +27,12 @@ ff: build/run
 			if [ -f "$${out}" ]; \
 			then \
 				printf "cmp $${f} $${out} "; \
-				# if [ "$${f: -4}" == ".ffp" ]; \
-				# then \
-				# 	./deno/build/preprocess $${f} | ./cpp/build/run 2>/dev/null | cmp - $${out} -s && $(CHECK); \
-				# else \
-				# 	cat $${f} | ./cpp/build/run 2>/dev/null | cmp - $${out} -s && $(CHECK); \
-				# fi; \
+				if [ "$${f: -4}" == ".ffp" ]; \
+				then \
+					./deno/build/preprocess $${f} | ./cpp/build/run 2>/dev/null | cmp - $${out} -s && $(CHECK); \
+				else \
+					cat $${f} | ./cpp/build/run 2>/dev/null | cmp - $${out} -s && $(CHECK); \
+				fi; \
 				./deno/build/compile $${f} --opt --disassemble | ./cpp/build/run 2>/dev/null | cmp - $${out} -s && $(CHECK); \
 				echo ""; \
 			fi \
