--- a/cpp/chompfile.toml
+++ b/cpp/chompfile.toml
@@ -1,12 +1,12 @@
-default-task = 'build'
 version = 0.1
+default-task = 'build'
 
 [env]
-RED = "\\033[0;31m"
-NC = "\\033[0m"
-GRN = "\\033[0;32m"
-BLUE = "\\033[0;34m"
-CHECK = "printf \"${GRN}OK${NC} \" || printf \"${RED}FAIL${NC} \""
+NC = '\033[0m'
+BLUE = '\033[0;34m'
+CHECK = 'printf "  ${GRN}OK${NC} " || printf "  ${RED}FAIL${NC} "'
+RED = '\033[0;31m'
+GRN = '\033[0;32m'
 
 [[task]]
 target = './build/#'
@@ -20,7 +20,7 @@ name = 'build'
 deps = ['./build/run']
 
 [[task]]
-name = 'cpp-interpret'
+name = 'interpret'
 dep = './build/run'
 run = '''
 	cat ../ff/example_v0.ff | ./build/run | cmp --s - "../ff/example_v0.out"
@@ -28,15 +28,29 @@ run = '''
 
 [[task]]
 name = 'test'
-deps = [':build',':cpp-interpret', ':cpp-ff']
-display = 'none'
+deps = [
+    ':build',
+    ':interpret',
+    ':ff',
+]
 serial = true
+display = 'none'
 
 [[task]]
-name = 'cpp-ff'
-deps = ['../ff/##.out', './build/run']
+name = 'build-deno-compiler'
+run = 'chomp -c ../deno/ :build:compile'
+
+[[task]]
+name = 'ff'
+deps = [
+    '../ff/##.out',
+    './build/run',
+    'build-deno-compiler',
+]
+serial = true
+invalidation = 'always'
+validation = 'none'
 display = 'status-only'
-invalidation = "always"
 run = '''
   shopt -s nullglob
   shopt -s extglob
@@ -44,5 +58,9 @@ run = '''
     ../deno/build/compile $i --opt --disassemble | ./build/run | cmp - $DEP -s && ${{CHECK}};
   done
 '''
-serial = true
-validation = "none"
+
+[[task]]
+name = 'clean'
+run = '''
+  rm -rf ./build
+'''
