--- a/deno/chompfile.toml
+++ b/deno/chompfile.toml
@@ -2,39 +2,48 @@ version = 0.1
 default-task = 'build'
 
 [env]
-RED = "\\033[0;31m"
-NC = "\\033[0m"
-GRN = "\\033[0;32m"
-BLUE = "\\033[0;34m"
-CHECK = "printf \"${GRN}OK${NC} \" || printf \"${RED}FAIL${NC} \""
+RED = '\033[0;31m'
+CHECK = 'printf "  ${GRN}OK${NC} " || printf "  ${RED}FAIL${NC} "'
+BLUE = '\033[0;34m'
+NC = '\033[0m'
+GRN = '\033[0;32m'
 
 [[task]]
-deps = ['./bin/ff-##.ts', './src/**/*.ts']
+name = 'build:##'
 target = './build/##'
+deps = [
+    './bin/ff-##.ts',
+    './src/**/*.ts',
+]
 run = '''
   deno compile --unstable --allow-env --allow-read -o $TARGET $DEP
 '''
 
 [[task]]
 name = 'build'
-deps = ['./build/compile', './build/run', './build/execute', './build/preprocess']
+deps = [
+    './build/compile',
+    './build/run',
+    './build/execute',
+    './build/preprocess',
+]
 
 [[task]]
-name = 'deno-compile'
+name = 'compile'
 dep = './build/compile'
 run = '''
 	./build/compile ../ff/example.ff | cmp --s - "../ff/example.ffb"
 '''
 
 [[task]]
-name = 'deno-execute'
+name = 'execute'
 dep = './build/execute'
 run = '''
 	./build/execute ../ff/example.ffb | cmp --s - "../ff/example.out"
 '''
 
 [[task]]
-name = 'deno-interpret'
+name = 'interpret'
 dep = './build/run'
 run = '''
 	./build/run ../ff/example.ff | cmp --s - "../ff/example.out"
@@ -42,17 +51,27 @@ run = '''
 
 [[task]]
 name = 'test'
+deps = [
+    'build',
+    ':compile',
+    ':execute',
+    ':interpret',
+    ':ff',
+    ':ff-opt',
+]
 serial = true
 display = 'none'
-deps = ['build', ':deno-compile', ':deno-execute', ':deno-interpret', ':deno-ff', ':deno-ff-opt']
 
 [[task]]
-name = 'deno-ff'
-deps = ['../ff/##.out','./build/run']
+name = 'ff'
+deps = [
+    '../ff/##.out',
+    './build/run',
+]
 serial = true
+invalidation = 'always'
+validation = 'none'
 display = 'status-only'
-validation = "none"
-invalidation = "always"
 run = '''
   if [ -f ${DEP%.*}.ffp ]; then
     ./build/run ${DEP%.*}.ffp | cmp - $DEP -s && ${{CHECK}};
@@ -63,12 +82,15 @@ run = '''
 '''
 
 [[task]]
-name = 'deno-ff-opt'
-deps = ['../ff/##.out','./build/run']
+name = 'ff-opt'
+deps = [
+    '../ff/##.out',
+    './build/run',
+]
 serial = true
+invalidation = 'always'
+validation = 'none'
 display = 'status-only'
-validation = "none"
-invalidation = "always"
 run = '''
   if [ -f ${DEP%.*}.ffp ]; then
     ./build/run ${DEP%.*}.ffp --opt | cmp - $DEP -s && ${{CHECK}};
@@ -78,3 +100,8 @@ run = '''
   fi
 '''
 
+[[task]]
+name = 'clean'
+run = '''
+  rm -rf ./build
+'''
